--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,7 +57,7 @@ repos:
     - id: sphinx-lint
 
 # For now, we use it. But it does not support a lot of sphinx features
-- repo: https://github.com/dzhu/rstfmt
-  rev: v0.0.14
-  hooks:
-    - id: rstfmt
+# - repo: https://github.com/dzhu/rstfmt
+#   rev: v0.0.14
+#   hooks:
+#     - id: rstfmt
