--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,8 +62,8 @@ repos:
   hooks:
     - id: rstfmt
 
-- repo: https://github.com/b8raoult/pre-commit-docconvert
-  rev: "0.1.0"
-  hooks:
-  - id: docconvert
-    args: ["-o", "numpy"]
+# - repo: ../pre-commit-docconvert
+#   rev: 07f5748
+#   hooks:
+#   - id: docconvert
+#     args: ["--in-place", "--output", "numpy"]
