--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,4 +10,8 @@ sphinx:
 
 python:
    install:
-     - requirements: docs/requirements.txt
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - all
