--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,89 +10,97 @@
 # https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
 
 [build-system]
-requires = ["setuptools>=60", "setuptools-scm>=8.0"]
+requires = [
+  "setuptools>=60",
+  "setuptools-scm>=8",
+]
 
 [project]
-description = "A package to hold various functions to support training of ML models on ECMWF data."
 name = "anemoi-utils"
 
-dynamic = ["version"]
+description = "A package to hold various functions to support training of ML models on ECMWF data."
+keywords = [
+  "ai",
+  "tools",
+]
+
 license = { file = "LICENSE" }
+authors = [
+  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
+]
+
 requires-python = ">=3.9"
 
-authors = [
-    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
-]
-
-keywords = ["tools", "ai"]
-
 classifiers = [
-    "Development Status :: 4 - Beta",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: Implementation :: CPython",
-    "Programming Language :: Python :: Implementation :: PyPy",
-    "Operating System :: OS Independent",
+  "Development Status :: 4 - Beta",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: Apache Software License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
+dynamic = [
+  "version",
+]
 dependencies = [
-    "tomli",  # Only needed before 3.11
-    "pyyaml",
-    "tqdm",
+  "pyyaml",
+  "tomli",  # Only needed before 3.11
+  "tqdm",
 ]
 
-[project.optional-dependencies]
-provenance = ["GitPython", "nvsmi"]
-
-text = ["termcolor"]
-
-grib = ["requests"]
-
+optional-dependencies.all = [
+  "gitpython",
+  "nvsmi",
+  "requests",
+  "termcolor",
+  "tomli",     # Only needed before 3.11
+]
+optional-dependencies.dev = [
+  "gitpython",
+  "nvsmi",
+  "requests",
+  "termcolor",
+  "tomli",     # Only needed before 3.11
+]
 # Loaded by read-the-docs
 # `pip install .[docs]`
-docs = [
-    "tomli",            # Only needed before 3.11
-    "termcolor",
-    "requests",
-    "sphinx",
-    "sphinx_rtd_theme",
-    "nbsphinx",
-    "pandoc",
-    "sphinx_argparse",
+optional-dependencies.docs = [
+  "nbsphinx",
+  "pandoc",
+  "requests",
+  "sphinx",
+  "sphinx-argparse",
+  "sphinx-rtd-theme",
+  "termcolor",
+  "tomli",            # Only needed before 3.11
 ]
-
-all = [
-    "tomli",     # Only needed before 3.11
-    "GitPython",
-    "nvsmi",
-    "termcolor",
-    "requests",
+optional-dependencies.grib = [
+  "requests",
 ]
-
-dev = [
-    "tomli",     # Only needed before 3.11
-    "GitPython",
-    "nvsmi",
-    "termcolor",
-    "requests",
-]
-
-[project.urls]
-Homepage = "https://github.com/ecmwf/anemoi-utils/"
-Documentation = "https://anemoi-utils.readthedocs.io/"
-Repository = "https://github.com/ecmwf/anemoi-utils/"
-Issues = "https://github.com/ecmwf/anemoi-utils/issues"
 # Changelog = "https://github.com/ecmwf/anemoi-utils/CHANGELOG.md"
+optional-dependencies.provenance = [
+  "gitpython",
+  "nvsmi",
+]
+optional-dependencies.text = [
+  "termcolor",
+]
+urls.Documentation = "https://anemoi-utils.readthedocs.io/"
+urls.Homepage = "https://github.com/ecmwf/anemoi-utils/"
+urls.Issues = "https://github.com/ecmwf/anemoi-utils/issues"
+urls.Repository = "https://github.com/ecmwf/anemoi-utils/"
+scripts.anemoi-utils = "anemoi.utils.__main__:main"
 
-[project.scripts]
-anemoi-utils = "anemoi.utils.__main__:main"
+[tool.setuptools.package-data]
+"anemoi.utils.mars" = [
+  "*.yaml",
+]
 
 [tool.setuptools_scm]
 version_file = "src/anemoi/utils/_version.py"
-
-[tool.setuptools.package-data]
-"anemoi.utils.mars" = ["*.yaml"]
