--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,9 @@ optional-dependencies.all = [
   "termcolor",
 ]
 optional-dependencies.dev = [
+  "gitpython",
   "nbsphinx",
+  "nvsmi",
   "pandoc",
   "pytest",
   "requests",
