--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,7 @@ repos:
   hooks:
   - id: ruff
     # Next line if for documenation cod snippets
-    exclude: '^(dev/.*|[A-Za-z].*_)\.py$'
+    exclude: '^[^_].*_\.py$'
     args:
     - --line-length=120
     - --fix
