--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,9 @@ dynamic = [
   "version",
 ]
 dependencies = [
+  "aniso8601",
   "pyyaml",
-  "tomli",  # Only needed before 3.11
+  "tomli",     # Only needed before 3.11
   "tqdm",
 ]
 
