ci: trigger ci on main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow on push to master or develop, except tag creation
   push:
     branches:
-      - 'master'
+      - 'main'
       - 'develop'
     tags-ignore:
       - '**'
