--- a/.gitignore
+++ b/.gitignore
@@ -120,8 +120,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-    .envrc
 .env
+.envrc
 .venv
 env/
 venv/
@@ -187,3 +187,7 @@ _build/
 *.sync
 _version.py
 *.code-workspace
+
+
+# Environments
+.envrc
