Update pyproject.toml with wcwidth used for text.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,7 @@ optional-dependencies.tests = [
 
 optional-dependencies.text = [
   "termcolor",
+  "wcwidth",
 ]
 urls.Documentation = "https://anemoi-utils.readthedocs.io/"
 urls.Homepage = "https://github.com/ecmwf/anemoi-utils/"
