ci: add pytest to hpc ci

--- a/.github/ci-hpc-config.yml
+++ b/.github/ci-hpc-config.yml
@@ -3,3 +3,6 @@ build:
   modules:
     - ninja
   parallel: 64
+
+  pytest_cmd: |
+    python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
