--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ optional-dependencies.provenance = [ "gitpython", "nvsmi" ]
 
 optional-dependencies.tests = [ "pytest" ]
 
-optional-dependencies.text = [ "termcolor" ]
+optional-dependencies.text = [ "termcolor", "wcwidth" ]
 
 urls.Documentation = "https://anemoi-utils.readthedocs.io/"
 urls.Homepage = "https://github.com/ecmwf/anemoi-utils/"
