--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,10 @@ classifiers = [
 dynamic = [ "version" ]
 dependencies = [
   "aniso8601",
+  "importlib-metadata; python_version<'3.10'",
+
   "pyyaml",
-  "tomli",     # Only needed before 3.11
+  "tomli",  # Only needed before 3.11
   "tqdm",
 ]
 
