--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,3 +82,7 @@ scripts.anemoi-utils = "anemoi.utils.__main__:main"
 
 [tool.setuptools_scm]
 version_file = "src/anemoi/utils/_version.py"
+
+[tool.pytest]
+# Show the slowest 20 tests
+addopts = "--durations=20"
