--- a/.github/ci-hpc-config.yml
+++ b/.github/ci-hpc-config.yml
@@ -5,4 +5,4 @@ build:
   parallel: 64
 
   pytest_cmd: |
-    python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
+    IN_CI_HPC=1 python -m pytest -vv -m 'not notebook and not no_cache_init' --cov=. --cov-report=xml
