--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -58,6 +58,6 @@
     ".": {
         "package-name": "anemoi-utils"
     }
-  }
-
+  },
+  "$schema": "https://raw.githubusercontent.com/google-github/release-please/main/schemas/config.json"
 }
