--- a/.github/workflows/pr-label-conventional-commits.yml
+++ b/.github/workflows/pr-label-conventional-commits.yml
@@ -8,6 +8,9 @@ on:
     types:
       [opened, reopened, labeled, unlabeled]
 
+permissions:
+  pull-requests: write
+
 jobs:
   assign-labels:
     runs-on: ubuntu-latest
