--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -4,6 +4,7 @@
   "bump-patch-for-minor-pre-major": true,
   "separate-pull-requests": true,
   "always-update": true,
+  "draft-pull-request": true,
   "changelog-type": "github",
   "include-component-in-tag": false,
   "include-v-in-tag": false,
