--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dynamic = [ "version" ]
 dependencies = [
   "aniso8601",
   "importlib-metadata; python_version<'3.10'",
+  "multiurl",
   "numpy",
   "python-dateutil",
   "pyyaml",
