--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
   "tqdm",
 ]
 
-optional-dependencies.all = [ "anemoi-utils[grib,provenance,text]" ]
+optional-dependencies.all = [ "anemoi-utils[grib,provenance,text,s3]" ]
 optional-dependencies.dev = [ "anemoi-utils[all,docs,tests]" ]
 
 optional-dependencies.docs = [
@@ -66,6 +66,10 @@ optional-dependencies.docs = [
 optional-dependencies.grib = [ "requests" ]
 
 optional-dependencies.provenance = [ "gitpython", "nvsmi" ]
+
+optional-dependencies.s3 = [
+  "boto3<1.36",
+]
 
 optional-dependencies.tests = [ "pytest" ]
 
