--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-# (C) Copyright 2024 Anemoi contributors.
+# (C) Copyright 2025 Anemoi contributors.
 #
 # This software is licensed under the terms of the Apache Licence Version 2.0
 # which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
@@ -44,6 +44,7 @@ dependencies = [
   "importlib-metadata; python_version<'3.10'",
   "multiurl",
   "numpy",
+  "pydantic>=2.9",
   "python-dateutil",
   "pyyaml",
   "tomli; python_version<'3.11'",
