--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ classifiers = [
 dynamic = [ "version" ]
 dependencies = [
   "aniso8601",
+  "deprecation",
   "importlib-metadata; python_version<'3.10'",
   "multiurl",
   "numpy",
