--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,12 +41,14 @@ classifiers = [
 dynamic = [ "version" ]
 dependencies = [
   "aniso8601",
+  "deprecation",
   "importlib-metadata; python_version<'3.10'",
   "multiurl",
   "numpy",
   "pydantic>=2.9",
   "python-dateutil",
   "pyyaml",
+  "rich",
   "tomli; python_version<'3.11'",
   "tqdm",
 ]
