--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ optional-dependencies.docs = [
 
 optional-dependencies.grib = [ "requests" ]
 
-optional-dependencies.mlflow = [ "mlflow>=2.11.1" ]
+optional-dependencies.mlflow = [ "mlflow>=2.11.1", "requests" ]
 
 optional-dependencies.provenance = [ "gitpython", "nvsmi" ]
 
