--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ optional-dependencies.docs = [
 
 optional-dependencies.grib = [ "requests" ]
 
-optional-dependencies.mlflow = [ "mlflow>=2.11.1", "requests" ]
+optional-dependencies.mlflow = [ "mlflow-skinny>=2.11.1", "requests" ]
 
 optional-dependencies.provenance = [ "gitpython", "nvsmi" ]
 
@@ -77,7 +77,7 @@ optional-dependencies.s3 = [
   "boto3>1.36",
 ]
 
-optional-dependencies.tests = [ "pytest", "pytest-mock>=3" ]
+optional-dependencies.tests = [ "anemoi-utils[mlflow]", "pytest", "pytest-mock>=3" ]
 
 optional-dependencies.text = [ "termcolor", "wcwidth" ]
 
