--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,8 +101,10 @@ markers = [
 
 [tool.mypy]
 strict = false
+mypy_path = "src"
+explicit_package_bases = true
 exclude = [
-  "docs/**",
+  "docs/.*",
 ]
 
 [tool.pydocstringformatter]
