feat: improve types of testing (#186)
## Description
Specification of the generic `callable` by extracting the each function
defined in the fixtures into its own class.

## What problem does this change solve?
Improves general code quality, clearer code and allow better code
completion.

## What issue or task does this change relate to?
<!-- link to Issue Number -->

##  Additional notes ##
<!-- Include any additional information, caveats, or considerations that
the reviewer should be aware of. -->

***As a contributor to the Anemoi framework, please ensure that your
changes include unit tests, updates to any affected dependencies and
documentation, and have been tested in a parallel setting (i.e., with
multiple GPUs). As a reviewer, you are also responsible for verifying
these aspects and requesting changes if they are not adequately
addressed. For guidelines about those please refer to
https://anemoi.readthedocs.io/en/latest/***

By opening this pull request, I affirm that all authors agree to the
[Contributor License
Agreement.](https://github.com/ecmwf/codex/blob/main/Legal/contributor_license_agreement.md)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,8 +100,10 @@ markers = [
 
 [tool.mypy]
 strict = false
+mypy_path = "src"
+explicit_package_bases = true
 exclude = [
-  "docs/**",
+  "docs/.*",
 ]
 
 [tool.pydocstringformatter]
