--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dynamic = [ "version" ]
 dependencies = [
   "aniso8601",
   "deprecation",
+  "entrypoints",
   "importlib-metadata; python_version<'3.10'",
   "multiurl",
   "numpy",
